# meeting-summarizer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  recorder.py  requirements.txt  summarizer.py  transcriber.py
meeting_summarizer/: __init__.py  audio.py  cli.py
